namespace ApiVault.DTOs
{
    public class TipoProductoDto
    {
        public int IdTipo { get; set; }
        public string Nombre { get; set; }
        public string Descripcion { get; set; }
    }
}
